cabal-version:      3.0
name:               consumers-metrics-prometheus
version:            1.0.0.0
synopsis:           Prometheus metrics for the consumers library

description:        Provides seamless instrumentation of your existing
                    consumers using Prometheus

homepage:           https://github.com/scrive/consumers
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md
author:             Scrive AB
maintainer:         Andrzej Rybczak <andrzej@rybczak.net>,
                    Jonathan Jouty <jonathan.jouty@scrive.com>
copyright:          Scrive AB
category:           Concurrency, Database
build-type:         Simple
tested-with:        GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.1 }

bug-reports:   https://github.com/scrive/consumers/issues
source-repository head
  type:             git
  location:         https://github.com/scrive/consumers.git

common language
  ghc-options:      -Wall -Wcompat -Werror=prepositive-qualified-module

  default-language: Haskell2010
  default-extensions: OverloadedStrings
                    , DisambiguateRecordFields
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , NamedFieldPuns
                    , ImportQualifiedPost
                    , NumericUnderscores
                    , RecordWildCards
                    , ScopedTypeVariables

library
  import:           language

  exposed-modules:  Database.PostgreSQL.Consumers.Instrumented

  build-depends:    base              >= 4.14   && < 5
                  , consumers         >= 2.3
                  , exceptions        >= 0.10
                  , hpqtypes          >= 1.11
                  , lifted-base       >= 0.2
                  , log-base          >= 0.11
                  , monad-control     >= 1.0
                  , monad-time        >= 0.4
                  , safe-exceptions   >= 0.1.7
                  , transformers-base >= 0.4
                  , prometheus-client >= 1.1.0

  hs-source-dirs:   src
